Unit tests for multimaps.